syntax = "proto3";
import "Sha1Wire.proto";
option csharp_namespace = "SourceCode.Chasm.IO.Proto.Wire";

	message CommitRefWire
	{
		Sha1Wire CommitId = 1;
	}
